{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player",
            "id": "8cc29694-4bb4-446e-aa88-dba815cd19b0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "2b0cc12b-3837-4fa9-9f42-8e6b8e8094d7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DefaultAttack",
                    "type": "Button",
                    "id": "6aafc771-e8c5-44e1-8897-297fd1400ede",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrongAttack",
                    "type": "Button",
                    "id": "07b1e32f-dca3-418e-adf1-f9a17acce230",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerEvent",
                    "type": "Button",
                    "id": "8bed69e4-49bc-472a-a89b-45639004ab68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Blocking",
                    "type": "Value",
                    "id": "266c44a8-126d-4bd5-b5b0-1834494ff4a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Evade",
                    "type": "Button",
                    "id": "bfa08cbd-ac57-4004-8312-60f5b80541bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WhirlwindAttack",
                    "type": "Button",
                    "id": "07c55d12-6789-4ce6-bcd6-486c75d7075e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CrossBowShot",
                    "type": "Button",
                    "id": "f364c00b-4857-4643-930a-40fed42516ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "a48f79f1-75b5-4178-bc62-0536d49c5a9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "34ca04d4-a604-4db7-b0cd-9d5876da25e4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "53e7206b-42fd-4005-9037-f8f16b17b9a9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "36de13a7-0ec6-4509-a809-49b09ac8d611",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "81072bcc-6deb-4d28-9dd2-8afc291c35f1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "87e330ab-c350-4247-ac10-54b22a5e0626",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "119d74c7-755e-48e3-8d89-8e9077c540cb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "DefaultAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6974c620-2ca3-4274-9b4e-d80a9cd87240",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "StrongAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a426df16-7f67-4f2d-9f32-13204262397e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "TriggerEvent",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31ada209-78a2-47d1-94e4-f4f2bbd4122c",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "Blocking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1d93369-73a2-4b32-b857-f92607fab782",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "Evade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2b8d0d7-a45a-4851-9a7b-7d83d0c05660",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "WhirlwindAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2304336-d695-4f25-bf41-381352cbd167",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "GameInput",
                    "action": "CrossBowShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d794c55-d713-4f49-870e-211c337fcc00",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CrossBowShot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "543c477a-c561-4150-a0a8-c40917d9a91b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GameInput",
            "bindingGroup": "GameInput",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}